styles.css
body {
	background: pink;
	font-family: sans-serif;
}



/*Utilities*/
.hidden {
	display: none;
}

.invisible {
	visibility: hidden;
}

.mainpic-holder {
	display: flex;
	align-items: center;
	justify-content: center;
  margin-top: 130px;
}

.mainpic {
	border-radius: 50%;
	width: 600px;
	border: 10px solid white;
}

.media-select {
	margin-top: 100px;
  background: #ffffff;
  border-radius: 5px;
  box-shadow: 0 4px 13px 2px #0000003b;
  align-items: center;
  display: flex;
  padding: 30px 0px;
}

.media-select .button {
	color:#7b7b7b;
	text-align:center;
	width: 33%;
	display: inline-block;
	font-size: 50px;
	font-weight: 300;
}

.media-select .button.selected {
	font-weight:400;
}

.media-select .button p {
	margin:0;
}

.play-funny-time {
	border-right: 1px solid #9e9e9e;
	border-left: 1px solid #9e9e9e;
}

#media-playing {
	margin-top: 40px;
	text-align:center;
	color:white;
	font-size:48px;
	overflow:elipsis;
	height:158px;
}

#media-controls {
	margin-top: 50px;
	padding: 0px 90px;
	display: flex;
	justify-content: space-around;
	align-items: center;
}

#media-controls .control {
	text-align: center
}

.control.playpause {
	border: 5px solid white;
	padding: 20px;
	border-radius: 50%;
}




.x1 {
  left: 5%;
  -webkit-transform: scale(0.9);
  -moz-transform: scale(0.9);
    transform: scale(0.9);
    opacity: 0.6;
    -webkit-animation: moveclouds 15s linear infinite, sideWays 4s ease-in-out infinite alternate;
    -moz-animation: moveclouds 15s linear infinite, sideWays 4s ease-in-out infinite alternate;
}

.x2 {
    left: 25%;
    -webkit-transform: scale(0.6);
    -moz-transform: scale(0.6);
    transform: scale(0.6);
    opacity: 0.9;
    -webkit-animation: moveclouds 25s linear infinite, sideWays 5s ease-in-out infinite alternate;
    -moz-animation: moveclouds 25s linear infinite, sideWays 5s ease-in-out infinite alternate;
}
.x3 {
    left: 55%;
    -webkit-transform: scale(0.8);
    -moz-transform: scale(0.8);
    transform: scale(0.8);
    opacity: 0.8;
    -webkit-animation: moveclouds 20s linear infinite, sideWays 4s ease-in-out infinite alternate;
    -moz-animation: moveclouds 20s linear infinite, sideWays 4s ease-in-out infinite alternate;
}
.x4 {
    left: 72%;
    -webkit-transform: scale(0.75);
    -moz-transform: scale(0.75);
    transform: scale(0.75);
    opacity: 0.9;
    -webkit-animation: moveclouds 18s linear infinite, sideWays 2s ease-in-out infinite alternate;
    -moz-animation: moveclouds 18s linear infinite, sideWays 0zs ease-in-out infinite alternate;
}
.x5 {
    left: 88%;
    -webkit-transform: scale(0.8);
    -moz-transform: scale(0.8);
    transform: scale(0.8);
    opacity: 0.3; 
    -webkit-animation: moveclouds 7s linear infinite, sideWays 1s ease-in-out infinite alternate;
    -moz-animation: moveclouds 7s linear infinite, sideWays 1s ease-in-out infinite alternate;
}
.x6 {
    left: 33%;
    opacity: 1; 
    -webkit-animation: moveclouds 2s linear infinite, swayWays 1s ease-in-out infinite alternate;
    animation: moveclouds 10s linear infinite, swayWays 9s ease-in-out infinite alternate;
}

@-webkit-keyframes moveclouds { 
    0% { 
        top: 732px;
    }
    100% { 
        top: -732px;
    }
}

@keyframes moveclouds {     
    0% { 
        top: 732px;
    }
    100% { 
        top: -732px;
    }
}

@-webkit-keyframes sideWays { 
    0% { 
        margin-left:0px;
    }
    100% { 
        margin-left:50px;
    }
}

@keyframes sideWays {
  0% {
      margin-left:0px;
  }
  100% {
      margin-left:50px;
  }
}

@-keyframes swayWays {
  0% {
    transform: rotate(12deg);
    left:-0.3%;
  }
  33%{
    transform: rotate(-2deg);
    left: 0.7%;
  }
  100% {
    transform: rotate(0deg);
    left:-12%;
  }
}










/* //  HEART CODE */
.altheart {
  background: url(https://chippd.github.io/erinValentine/img/heart.svg) no-repeat center;
  width: 24px;
  height: 21px;
  position: relative;
  display: block;
}

.heart {
    position: relative;
}
.heart:before,
.heart:after {
    position: absolute;
    content: "";
    left: 18px;
    top: 0;
    width: 18px;
    height: 30px;
    background: #CC2022;
    -moz-border-radius: 20px 50% 0 0;
    border-radius: 30px 30px 0 0;
    -webkit-transform: rotate(-45deg);
        -ms-transform: rotate(-45deg);
            transform: rotate(-45deg);
    -webkit-transform-origin: 0 100%;
        -ms-transform-origin: 0 100%;
            transform-origin: 0 100%;
}
.heart:after {
    left: 0;
    -webkit-transform: rotate(45deg);
        -ms-transform: rotate(45deg);
            transform: rotate(45deg);
    -webkit-transform-origin: 100% 100%;
        -ms-transform-origin: 100% 100%;
            transform-origin :100% 100%;
}

